cluster/apps/default/beancount/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: beancount-svc
  namespace: default
spec:
  selector:
    app: beancount
  ports:
    - name: beancount-web
      protocol: TCP
      port: 80
      targetPort: web
